--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Blog Landing Page</title>
-</head>
-<body>
-    <h1>Welcome to the  CK Blog!</h1>
-    <p>This is the landing page for the blog.</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+CK Blog Landing Page
+{% endblock %}
+
+{% block content %}
+<h1>Welcome to the CK Blog!</h1>
+<p>This is the landing page for the blog.</p>
+{% endblock %}
