--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,5 +6,5 @@ CK Blog Landing Page
 
 {% block content %}
 <h1>Welcome to the CK Blog!</h1>
-<p>This is the landing page for the blog.</p>
+<p>This is the awesome landing page for the blog.</p>
 {% endblock %}
