--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,6 +5,6 @@ CK Blog Landing Page
 {% endblock %}
 
 {% block content %}
-<h1>Welcome to the CK Blog!</h1>
-<p>This is the awesome landing page for the blog.</p>
+    <h1>Welcome to the CK Blog!</h1>
+    ß<p>This is the awesome landing page for the blog.</p>
 {% endblock %}
