Refactor blog index template to include header and navigation links for improved structure

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,6 +5,11 @@ CK Blog Landing Page
 {% endblock %}
 
 {% block content %}
-    <h1>Welcome to the CK Blog!</h1>
-    ß<p>This is the awesome landing page for the blog.</p>
+<header>
+    <h1><a href="">CK Blog</a></h1>
+    <nav>
+        <a href="">All Posts</a>
+    </nav>
+</header>
+<p>This is the awesome landing page for the blog.</p>
 {% endblock %}
