--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,11 +5,48 @@ CK Blog Landing Page
 {% endblock %}
 
 {% block content %}
-<header>
+<header id="main-navigation">
     <h1><a href="">CK Blog</a></h1>
     <nav>
         <a href="">All Posts</a>
     </nav>
 </header>
-<p>This is the awesome landing page for the blog.</p>
+<section id="welcome">
+    <header>
+        <img src="" alt="Welcome to CK Blog" />
+        <h1>CK's Blog</h1>
+    </header>
+    <p>This is the awesome landing page for the blog.</p>
+</section>
+
+<section id="latest-posts">
+    <h2>My Latest Thoughts...</h2>
+
+    <ul>
+        <li>
+            <article class="post">
+                <a href="">
+                    <img src="" alt="Mountain Hiking" />
+                    <div class="post__content">
+                        <h3>Mountain Hiking</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptas earum. Doloribus
+                            fuga inventore possimus eos. Doloremque maxime, animi beatae et inventore quis dolor eius
+                            explicabo? Molestias, a quo! Ullam, ea labore? Sequi, libero sunt!...</p>
+                    </div>
+                </a>
+            </article>
+        </li>
+    </ul>
+
+</section>
+
+<section id="about-me">
+    <h2>About Me</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptas earum. Doloribus fuga inventore
+        possimus eos. Doloremque maxime, animi beatae et inventore quis dolor eius explicabo? Molestias, a quo! Ullam,
+        ea labore? Sequi, libero sunt!...</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus beatae deleniti recusandae odit assumenda
+        aliquam sequi nisi, perspiciatis nostrum! Odit quibusdam placeat itaque minus dolore molestiae mollitia quas
+        natus, tempore voluptates laborum officia velit nam?</p>
+</section>
 {% endblock %}
