Fix image source paths in blog index template for proper display

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -21,7 +21,7 @@ CK Blog Landing Page
 </header>
 <section id="welcome">
     <header>
-        <img src="" alt="Welcome to CK Blog" />
+        <img src="{% static 'blog/images/cka.jpg' %}" alt="Welcome to CK Blog" />
         <h1>CK's Blog</h1>
     </header>
     <p>This is the awesome landing page for the blog.</p>
@@ -35,7 +35,7 @@ CK Blog Landing Page
             <article class="post">
                 <a href="">
                     <div class="post__content">
-                        <img src="" alt="Mountain Hiking" />
+                        <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking" />
                         <h3>Mountain Hiking</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptas earum. Doloribus
                             fuga inventore possimus eos. Doloremque maxime, animi beatae et inventore quis dolor eius
