--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -2,7 +2,7 @@
 <!-- {% load static %} -->
 
 {% block title %}
-CK Blog All Posts Page
+All Posts Page
 {% endblock %}
 
 {% block css_files %}
@@ -10,5 +10,22 @@ CK Blog All Posts Page
 {% endblock %}
 
 {% block content %}
-All posts
+<section id="all-posts">
+    <h1>My Posts</h1>
+    <ul>
+        <li>
+            <article class="post">
+                <a href="">
+                    <div class="post__content">
+                        <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking" />
+                        <h3>Mountain Hiking</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptas earum. Doloribus
+                            fuga inventore possimus eos. Doloremque maxime, animi beatae et inventore quis dolor eius
+                            explicabo? Molestias, a quo! Ullam, ea labore? Sequi, libero sunt!...</p>
+                    </div>
+                </a>
+            </article>
+        </li>
+    </ul>
+</section>
 {% endblock %}
