--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -16,6 +16,9 @@ All Posts Page
         {% include 'blog/includes/post.html' %}
         {% include 'blog/includes/post.html' %}
         {% include 'blog/includes/post.html' %}
+        {% include 'blog/includes/post.html' %}
+        {% include 'blog/includes/post.html' %}
+        {% include 'blog/includes/post.html' %}
     </ul>
 </section>
 {% endblock %}
