Update heading in all-posts.html for improved clarity

--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -11,7 +11,7 @@ All Posts Page
 
 {% block content %}
 <section id="all-posts">
-    <h1>My Posts</h1>
+    <h1>My Collection of Posts</h1>
     <ul>
         {% include 'blog/includes/post.html' %}
         {% include 'blog/includes/post.html' %}
