--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,6 +6,7 @@ CK Blog Landing Page
 {% endblock %}
 
 {% block css_files %}
+<link rel="stylesheet" href="{% static 'blog/post.css' %}">
 <link rel="stylesheet" href="{% static 'blog/index.css' %}">
 {% endblock %}
 
