--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
 <body>
     <header id="main-navigation">
-        <h1><a href="">CK Blog h1 Title</a></h1>
+        <h1><a href="{% url 'home' %}">CK Ashby's Blog</a></h1>
         <nav>
             <a href="">All Posts</a>
         </nav>
