--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <header id="main-navigation">
         <h1><a href="{% url 'home' %}">CK Ashby's Blog</a></h1>
         <nav>
-            <a href="">All Posts</a>
+            <a href="{% url 'all-posts' %}">All Posts</a>
         </nav>
     </header>
     <hr />
