Update post link in template for correct URL referencing

--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -2,7 +2,7 @@
 
 <li>
     <article class="post">
-        <a href="">
+        <a href="{% url 'post-detail-page' 'the-mountains' %}">
             <div class="post__content">
                 <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking" />
                 <h3>Mountain Hiking</h3>
