--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -6,8 +6,7 @@ This Post Title <!-- {{ post.title }} -->
 {% endblock %}
 
 {% block css_files %}
-<link rel="stylesheet" href="{% static 'blog/post.css' %}">
-<link rel="stylesheet" href="{% static 'blog/all-posts.css' %}">
+<link rel="stylesheet" href="{% static 'blog/post-detail.css' %}">
 {% endblock %}
 
 {% block content %}
