Update post detail template with specific post title and content adjustments

--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -11,7 +11,7 @@ This Post Title <!-- {{ post.title }} -->
 
 {% block content %}
 <section id="summary">
-    <h2>Post Title</h2>
+    <h2>Mountain Hiking Post</h2>
     <article>
         <img src="{% static 'blog/images/mountains.jpg' %}" alt="Post Title" />
         <address>By CK Ashby</address>
@@ -23,10 +23,10 @@ This Post Title <!-- {{ post.title }} -->
         <p>Post Content Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores tempora est possimus
             voluptates, error exercitationem quo vero hic expedita fuga, recusandae fugit explicabo. Similique sequi,
             quasi consequatur voluptas fugiat alias aperiam quis ipsam accusamus?</p>
-        <p>Post Content Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores tempora est possimus
+        <p>More Content Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores tempora est possimus
             voluptates, error exercitationem quo vero hic expedita fuga, recusandae fugit explicabo. Similique sequi,
             quasi consequatur voluptas fugiat alias aperiam quis ipsam accusamus?</p>
-        <p>Post Content Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores tempora est possimus
+        <p>End Content Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores tempora est possimus
             voluptates, error exercitationem quo vero hic expedita fuga, recusandae fugit explicabo. Similique sequi,
             quasi consequatur voluptas fugiat alias aperiam quis ipsam accusamus?</p>
     </main>
