Update post content in the detail template for improved description

--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -6,9 +6,8 @@
             <div class="post__content">
                 <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking" />
                 <h3>Mountain Hiking</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptas earum. Doloribus
-                    fuga inventore possimus eos. Doloremque maxime, animi beatae et inventore quis dolor eius
-                    explicabo? Molestias, a quo! Ullam, ea labore? Sequi, libero sunt!...</p>
+                <p>There is nothing like the views you get when hiking in the mountains. This was a very pleasant
+                    suprise...</p>
             </div>
         </a>
     </article>
