--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -2,12 +2,11 @@
 
 <li>
     <article class="post">
-        <a href="{% url 'post-detail-page' 'the-mountains' %}">
+        <a href="{% url 'post-detail-page' post.slug %}">
             <div class="post__content">
-                <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking" />
-                <h3>Mountain Hiking</h3>
-                <p>There is nothing like the views you get when hiking in the mountains. This was a very pleasant
-                    suprise...</p>
+                <img src="{% static 'blog/images/'|add:post.image %}" alt="Mountain Hiking" />
+                <h3>{{ post.title }}</h3>
+                <p>{{ post.excerpt }}</p>
             </div>
         </a>
     </article>
