--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -4,7 +4,7 @@
     <article class="post">
         <a href="{% url 'post-detail-page' post.slug %}">
             <div class="post__content">
-                <img src="{% static 'blog/images/'|add:post.image %}" alt="Mountain Hiking" />
+                <img src="{% static 'blog/images/'|add:post.image %}" alt="{{ post.title }}" />
                 <h3>{{ post.title }}</h3>
                 <p>{{ post.excerpt }}</p>
             </div>
