--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -14,12 +14,15 @@ All Posts Page
 <section id="all-posts">
     <h1>My Collection of Posts</h1>
     <ul>
-        {% include 'blog/includes/post.html' %}
-        {% include 'blog/includes/post.html' %}
-        {% include 'blog/includes/post.html' %}
-        {% include 'blog/includes/post.html' %}
-        {% include 'blog/includes/post.html' %}
-        {% include 'blog/includes/post.html' %}
+        {% for  post in all_posts %}
+
+        <li>
+            <!-- <h2>{{ post.title }}</h2>
+            <p>{{ post.excerpt }}</p> -->
+            {% include 'blog/includes/post.html' with post=post %}
+        </li>
+        
+        {% endfor %}
     </ul>
 </section>
 {% endblock %}
